--- a/EjemploArquitectura/01.App_Web/Web.config
+++ b/EjemploArquitectura/01.App_Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name ="mibase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=c:\users\paiggo\documents\visual studio 2013\Projects\EjemploArquitectura\01.App_Web\App_Data\Bd_1.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name ="mibase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Juank\Documents\GitHub\mantenedor\EjemploArquitectura\01.App_Web\App_Data\Bd_1.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
