--- a/EjemploArquitectura/01.App_Web/Web.config
+++ b/EjemploArquitectura/01.App_Web/Web.config
@@ -5,10 +5,14 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name ="mibase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Juank\Documents\GitHub\mantenedor\EjemploArquitectura\01.App_Web\App_Data\Bd_1.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="mibase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Juank\Documents\GitHub\mantenedor\EjemploArquitectura\01.App_Web\App_Data\Bd_1.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  </system.web>
+  <pages>
+      <controls>
+        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+      </controls>
+    </pages></system.web>
 </configuration>
